--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "hw--12-employee-tracker",
   "version": "1.0.0",
-  "description": "",
+  "description": "This is a command-line application to manage a company's employee database, and it uses Node.js, Inquirer, and MySQL.",
   "main": "server.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
@@ -20,6 +20,7 @@
   "dependencies": {
     "console.table": "^0.10.0",
     "inquirer": "^7.3.3",
-    "mysql": "^2.18.1"
-  }
+    "mysql2": "^3.9.2"
+  },
+  "keywords": []
 }
